SFDC_LD_Packages/objects-layouts/main/default/objects/User/User.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>