SFDC_LD_Packages/objects-layouts/main/default/objects/User/fields/Admin_Bypass_Validations__c.field-meta.xml
<CustomField>
    <fullName>Admin_Bypass_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag that can be set to allow the user to bypass validation rules. Validation rules should be encoded accordingly to check for this flag when needed.</description>
    <inlineHelpText>If checked, the user will bypass certain validation rules when performing data operations.</inlineHelpText>
    <label>Admin Bypass Validations</label>
    <type>Checkbox</type>
</CustomField>