SFDC_LD_Packages/objects-layouts/main/default/objects/User/fields/affectlayer__AffectLayer_Callback_Number__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__AffectLayer_Callback_Number__c</fullName>
    <label>AffectLayer Callback Number</label>
    <type>Phone</type>
</CustomField>