SFDC_LD_Packages/objects-layouts/main/default/objects/User/fields/BDR__c.field-meta.xml
<CustomField>
    <fullName>BDR__c</fullName>
    <description>BDR assigned to AE User</description>
    <label>BDR</label>
    <relationshipName>BDR</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>