SFDC_LD_Packages/objects-layouts/main/default/objects/User/fields/Clubhouse_ID__c.field-meta.xml
<CustomField>
    <fullName>Clubhouse_ID__c</fullName>
    <description>External ID for Clubhouse</description>
    <externalId>true</externalId>
    <label>Clubhouse ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>