SFDC_LD_Packages/objects-layouts/main/default/objects/User/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <description>sync from Namely</description>
    <externalId>true</externalId>
    <label>Employee ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>