SFDC_LD_Packages/objects-layouts/main/default/objects/User/fields/Manager_Text__c.field-meta.xml
<CustomField>
    <fullName>Manager_Text__c</fullName>
    <description>Used for reporting because standard manager lookup is not reportable.</description>
    <formula>Manager.FirstName + &quot; &quot; + Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Text</label>
    <type>Text</type>
</CustomField>