SFDC_LD_Packages/objects-layouts/main/default/objects/User/fields/mkto_si__IsCachingAnonWebActivityList__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__IsCachingAnonWebActivityList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCachingAnonWebActivityList</label>
    <type>Checkbox</type>
</CustomField>