SFDC_LD_Packages/objects-layouts/main/default/objects/User/fields/mkto_si__IsCachingEmailActivityList__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__IsCachingEmailActivityList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCachingEmailActivityList</label>
    <type>Checkbox</type>
</CustomField>