SFDC_LD_Packages/objects-layouts/main/default/objects/User/fields/mkto_si__Sales_Insight_Counter__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Sales_Insight_Counter__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Marketo Sales Insight Welcome Counter</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>