SFDC_LD_Packages/objects-layouts/main/default/objects/User/fields/Retention_Target__c.field-meta.xml
<CustomField>
    <fullName>Retention_Target__c</fullName>
    <label>Retention Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>