SFDC_LD_Packages/objects-layouts/main/default/objects/User/fields/SE_Territory__c.field-meta.xml
<CustomField>
    <fullName>SE_Territory__c</fullName>
    <description>Which Territory the SE Covers</description>
    <label>SE Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>