SFDC_LD_Packages/objects-layouts/main/default/objects/User/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>18-digit user record Id.</inlineHelpText>
    <label>User Id</label>
    <type>Text</type>
</CustomField>