SFDC_LD_Packages/objects-layouts/main/default/objects/User/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <description>User Role Name for Process Builder References</description>
    <formula>UserRole.Name</formula>
    <label>User Role Name</label>
    <type>Text</type>
</CustomField>