SFDC_LD_Packages/objects-layouts/main/default/objects/User/fields/WorkRampGroups__c.field-meta.xml
<CustomField>
    <fullName>WorkRampGroups__c</fullName>
    <description>List of WorkRamp groups this user belongs to.</description>
    <label>WorkRamp Groups</label>
    <type>TextArea</type>
</CustomField>