SFDC_LD_Packages/objects-layouts/main/default/objects/User/fields/X18_Digit_BDR_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_BDR_ID__c</fullName>
    <formula>X18_Digit_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit BDR ID</label>
    <type>Text</type>
</CustomField>