SFDC_LD_Packages/objects-layouts/main/default/objects/User/listViews/AllUsers.listView-meta.xml
<ListView>
    <fullName>AllUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <filterScope>Everything</filterScope>
    <label>All Users</label>
    <sharedTo>
        <roleAndSubordinates>Administrator</roleAndSubordinates>
    </sharedTo>
</ListView>